--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/cache/
 
 # Created by https://www.toptal.com/developers/gitignore/api/webstorm+all,node,solidity,soliditytruffle
 # Edit at https://www.toptal.com/developers/gitignore?templates=webstorm+all,node,solidity,soliditytruffle
