--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "solidity-experiment",
   "version": "1.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "hardhat compile",
+    "test:light": "hardhat test",
+    "test": "hardhat coverage"
   },
   "keywords": [],
-  "author": "",
+  "author": "Markus Mayer",
   "license": "ISC",
   "description": "",
   "devDependencies": {
