--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "build": "hardhat compile",
     "test:light": "hardhat test",
-    "test": "hardhat coverage"
+    "test": "hardhat coverage",
+    "deploy:local": "hardhat run --network localhost scripts/deployMyContract.js",
+    "local-testnet": "hardhat node"
   },
   "keywords": [],
   "author": "Markus Mayer",
